RESOLVED FIXED 247988
[cssom] Missing logic for serializing some shorthands at specified-value time
https://bugs.webkit.org/show_bug.cgi?id=247988
Summary [cssom] Missing logic for serializing some shorthands at specified-value time
Oriol Brufau
Reported 2022-11-16 11:58:08 PST
StyleProperties::getPropertyValue() is missing logic for serializing these legacy shorthands: -webkit-border-radius -webkit-column-break-after -webkit-column-break-before -webkit-column-break-inside -webkit-perspective
Attachments
Radar WebKit Bug Importer
Comment 1 2022-11-23 11:59:15 PST
Oriol Brufau
Comment 2 2022-11-27 11:35:45 PST
-webkit-border-radius addressed in bug 183994.
Oriol Brufau
Comment 3 2022-11-27 11:38:14 PST
EWS
Comment 4 2022-11-28 05:53:11 PST
Committed 257068@main (3a4c0cbdfa7b): <https://commits.webkit.org/257068@main> Reviewed commits have been landed. Closing PR #6839 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.