[cssom] Serialize -webkit-perspective and -webkit-column-break properties https://bugs.webkit.org/show_bug.cgi?id=247988

Reviewed by Tim Nguyen.

-webkit-perspective can be serialized like perspective. The former also
accepts unitless lengths, but better not serialize to that.

The -webkit-column-break-* properties are serialized in a way analogous
to page-break-*.

Tests: fast/multicol/column-break-serialization.html
       imported/w3c/web-platform-tests/css/cssom/cssom-getPropertyValue-common-checks.html

* LayoutTests/fast/multicol/column-break-serialization-expected.txt: Added.
* LayoutTests/fast/multicol/column-break-serialization.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/cssom/cssom-getPropertyValue-common-checks-expected.txt:
* Source/WebCore/css/StyleProperties.cpp:
(WebCore::StyleProperties::getPropertyValue const):
(WebCore::StyleProperties::breakInsideShorthandValue const):
(WebCore::StyleProperties::pageBreakValue const):
(WebCore::StyleProperties::webkitColumnBreakValue const):
(WebCore::StyleProperties::pageBreakPropertyValue const): Deleted.
* Source/WebCore/css/StyleProperties.h:

Canonical link: https://commits.webkit.org/257068@main