Source/WebCore/css/StyleProperties.h
@@ -160,7 +160,9 @@ private:
     String borderImagePropertyValue(const StylePropertyShorthand&) const;
     String borderPropertyValue(const StylePropertyShorthand&, const StylePropertyShorthand&, const StylePropertyShorthand&) const;
     String borderRadiusShorthandValue(const StylePropertyShorthand&) const;
-    String pageBreakPropertyValue(const StylePropertyShorthand&) const;
+    String breakInsideShorthandValue(const StylePropertyShorthand&) const;
+    String pageBreakValue(const StylePropertyShorthand&) const;
+    String webkitColumnBreakValue(const StylePropertyShorthand&) const;
     String getLayeredShorthandValue(const StylePropertyShorthand&) const;
     String get2Values(const StylePropertyShorthand&) const;
     String get4Values(const StylePropertyShorthand&) const;
